src/test/deca/context/invalid/operation-binaire-or-wrong.deca
// Description:
//    Test 3.33 fail avec or 
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : A boolean operation has to be done only between 2 booleans (rule 3.33)
//
// Historique:
//    cree le 06/01/2023

{
    1 || "hello world";
}